# untitled-gba

./: .gitignore  Cargo.toml  DEV Cheat Sheet.md  README.md  build.rs  untitled-gba-game.gba
.cargo/: config.toml
gfx/boar/: Hit.aseprite  Idle.aseprite  Run.aseprite
gfx/warrior/: Attack.aseprite  AttackEnd.aseprite  DeadEnd.aseprite  DeadStart.aseprite  Idle.aseprite  Jump.aseprite  NewAttack.aseprite  Run.aseprite  RunningAttack.aseprite
map/: untitled-gba-game.tiled-project  untitled-gba-game.tiled-session
map/level_1/: level_1_background_tile_set.json  level_1_background_tile_set.tsx  level_1_foreground_tile_set.json  level_1_foreground_tile_set.tsx  level_1_map.json  level_1_map.tmx
map/level_2/: level_2_background_tile_set.json  level_2_background_tile_set.tsx  level_2_foreground_tile_set.json  level_2_foreground_tile_set.tsx  level_2_map.json  level_2_map.tmx
src/: display_text.rs  level.rs  lib.rs  main.rs  map.rs  player.rs  playing_level.rs  splash_screen.rs  sprites.rs  types.rs
src/entities/: enemies.rs  entity.rs  mod.rs
